Fix for invisible text

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,7 +3,7 @@ body {
 	width:100%;
 	height:100%;
 	background:black;
-	color:white;
+	color:black;
 }
 
 * { 
